<resources>
    <string name="app_name">Airchecker</string>
    <string name="last_refresh">Letzte Aktualisierung am:</string>
    <string name="last_refresh_timestamp">timestamp</string>

    <string name="pollutants1_headline">Luftschadstoffe</string>

    <string name="pollutants1_e1_name">Stickstoffmonoxid</string>
    <string name="pollutants1_e1_name2">NO</string>
    <string name="pollutants1_e1_value">*value*</string>

    <string name="pollutants1_e2_name">Feinstaub:</string>
    <string name="pollutants1_e2_name2">PM10</string>
    <string name="pollutants1_e2_value">*value*</string>

    <string name="pollutants1_e3_name">Stickstoffdioxid</string>
    <string name="pollutants1_e3_name2">NO2</string>
    <string name="pollutants1_e3_value">*value*</string>

    <string name="pollutants1_e4_name">Schwefeldioxid</string>
    <string name="pollutants1_e4_name2">SO2</string>
    <string name="pollutants1_e4_value">*value*</string>

    <string name="pollutants1_e5_name">Ozon</string>
    <string name="pollutants1_e5_name2">O3</string>
    <string name="pollutants1_e5_value">*value*</string>


    <string name="pollutants2_headline">Pollen</string>

    <string name="pollutants2_e1_name">filler</string>
    <string name="pollutants2_e1_name2">filler</string>
    <string name="pollutants2_e1_value">*value*</string>

    <string name="pollutants2_e2_name">filler:</string>
    <string name="pollutants2_e2_name2">filler</string>
    <string name="pollutants2_e2_value">*value*</string>

    <string name="pollutants2_e3_name">filler</string>
    <string name="pollutants2_e3_name2">filler</string>
    <string name="pollutants2_e3_value">*value*</string>

    <string name="pollutants2_e4_name">filler</string>
    <string name="pollutants2_e4_name2">filler</string>
    <string name="pollutants2_e4_value">*value*</string>

    <string name="pollutants2_e5_name">filler</string>
    <string name="pollutants2_e5_name2">filler</string>
    <string name="pollutants2_e5_value">*value*</string>

    <string name="pollutants2_e6_name">filler</string>
    <string name="pollutants2_e6_name2">filler</string>
    <string name="pollutants2_e6_value">*value*</string>

    <string name="pollutants2_e7_name">filler</string>
    <string name="pollutants2_e7_name2">filler</string>
    <string name="pollutants2_e7_value">*value*</string>

</resources>
